Añadida la funcion de agregar imagenes arrastrandolas al cuadro

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -26,3 +26,5 @@ framework:
                 base_path: '/js/js-admin'
             imagen:
                 base_path: '/img'
+            upload:
+                base_path: '/templates/adminPage'
